--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,21 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple fullstack app</title>
-    <script src="dist/index.js" defer></script>
+    <script src="dist/index.js"></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
     />
   </head>
-  <body>
+  <body style="margin: 0 auto; padding: 1rem">
+    <h1>Verify The Phone Number: Is It Valid?</h1>
     <form id="mobilePhoneNumberForm">
       <fieldset>
-        <label>
-          Mobile phone number
           <input id="mobilePhoneNumber" name="mobile-phone-number" placeholder="Enter number" />
-        </label>
       </fieldset>
-      <input type="submit" value="Subscribe" />
+      <input type="submit" value="Check" />
     </form>
     <p id="messageFromBackend"></p>
   </body>
