--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,11 @@
     <h1>Verify The Phone Number: Is It Valid?</h1>
     <form id="mobilePhoneNumberForm">
       <fieldset>
-          <input id="mobilePhoneNumber" name="mobile-phone-number" placeholder="Enter number" />
+        <input
+          id="mobilePhoneNumber"
+          name="mobile-phone-number"
+          placeholder="Enter number"
+        />
       </fieldset>
       <input type="submit" value="Check" />
     </form>
